--- a/demo/src/main/resources/application.yaml
+++ b/demo/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 app:
   datasource:
-    jdbc-url: jdbc:postgres://localhost:5000/postgres
+    jdbc-url: jdbc:postgresql://172.17.0.2/postgres
     username: postgres
-    password:
+    password: password
     pool-size: 30
 
