add profile properties and docekr-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/test
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=${POSTGRES_DB_URL}
+spring.datasource.username=${POSTGRES_DB_USERNAME}
+spring.datasource.password=${POSTGRES_DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
