--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,3 +23,8 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
