--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run tests with Maven
-      run: mvn -DskipITs test
+      run: mvn clean install -DskipITs -Dtest=!TestIntegrationSampleApplication
