--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,6 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Build with Maven
-#      run: mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml
 #    - name: Run tests with Maven
 #      run: mvn clean install -DskipITs -Dtest=!TestIntegrationSampleApplication
