--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,5 +23,5 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-#    - name: Run tests with Maven
-#      run: mvn clean install -DskipITs -Dtest=!TestIntegrationSampleApplication
+    - name: Run tests with Maven
+      run: mvn clean install -DskipITs -Dtest=!TestIntegrationSampleApplication
