--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,10 @@
             <scope>test</scope>
             <version>1.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
