--- a/src/test/resources/application-integration.properties
+++ b/src/test/resources/application-integration.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=${POSTGRES_DB_URL}
-spring.datasource.username=${POSTGRES_DB_USERNAME}
-spring.datasource.password=${POSTGRES_DB_PASSWORD}
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+spring.datasource.url=jdbc:tc:postgresql:alpine:///
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
